# storyCrew

./: .gitignore  README.md  TASK_8_COMPLETION_SUMMARY.md  TASK_9_COMPLETION_REPORT.md  docs_logging_format.md  pyproject.toml
docs/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  E2E_VALIDATION_REPORT.md  POST_MERGE_CHECKLIST.md  selective-retry-guide.md
docs/plans/: 2026-01-14-selective-retry-design.md  2026-01-14-selective-retry-implementation.md
scripts/: validate_selective_retry.py
src/storycrew/: crew.py  main.py
src/storycrew/config/: agents.yaml  tasks.yaml
src/storycrew/crews/: __init__.py  chapter_crew.py  final_crew.py  init_crew.py
src/storycrew/listeners/: __init__.py  llm_logging_listener.py
src/storycrew/models/: __init__.py  chapter_generation_state.py  issue.py  judge_report.py  outline.py  retry_level.py  scene_list.py  story_bible.py  story_spec.py
src/storycrew/tools/: __init__.py  word_counter.py
tests/: test_chapter_crew_retry.py  test_chapter_generation_state.py  test_retry_level.py
