[project]
name = "storycrew"
version = "0.1.0"
description = "storyCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
storycrew = "storycrew.main:run"
run_crew = "storycrew.main:run"
train = "storycrew.main:train"
replay = "storycrew.main:replay"
test = "storycrew.main:test"
run_with_trigger = "storycrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
